--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <body>
         <h1>Odin Recipes</h1>
+        <img src="images/Feteer.jpg" width="400">
+        <h4>Your kitchen and heaven on the internet for your favorite recipes!!!!</h4>
         <ul>
             <li><a href='recipes/pretzel-fried-chicken.html'>Pretzel Fried Chicken</a></li>
             <li><a href="recipes/hamburger-steak-with-onions-and-gravy.html">Hamburger Steak with Onions and Gravy</a></li>
